feat: add hero section

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     </style>
 </head>
 
-<body class="max-w-[1440px] mx-auto box-border">
-    <header class="bg-[#FFFBF0]">
+<body class="max-w-[1440px] mx-auto box-border ">
+    <header class="bg-[#FFFBF0] px-4 md:px-12 lg:px-24 xl:px-36">
 
-        <nav class="flex justify-between items-center px-4 md:px-12 lg:px-24 xl:px-36 pt-6 lg:pt-8 xl:pt-10  pb-14">
+        <nav class="flex justify-between items-center pt-6 lg:pt-8 xl:pt-10  pb-14">
             <div class="flex items-center gap-2 montserrat-font">
                 <img class="w-9 h-7 lg:w-14 lg:h-10" src="Assets/icons/penguin.png" alt="">
                 <h2 class="font-bold lg:text-2xl">
@@ -59,6 +59,34 @@
             </div>
         </nav>
 
+        <!-- Hero Section -->
+        <section class="md:flex items-center justify-around pb-11 md:pb-16 lg:pb-28">
+            <div>
+                <h1 class="bebas-font text-5xl xl:text-7xl w-[290px] xl:w-[416px]">
+                    <span class="text-[#FABE4C]">Be the Penguins</span>
+                    <span class="text-[#363958]">of Winter</span>
+                </h1>
+                <p class="roboto-font text-[#3E3E3E] w-[312px] lx:w-[400px]">Lorem Ipsum is simply dummy text of the
+                    printing
+                    and typesetting industry.</p>
+                <div class="roboto-font py-6">
+                    <button
+                        class="bg-gradient-to-r  from-[#A4BC46] to-[#85A019] flex gap-2 py-4 px-8 rounded-lg cursor-pointer">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="white" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                        </svg>
+
+                        <p class="text-white font-medium">Buy Now</p>
+                    </button>
+                </div>
+            </div>
+            <div>
+                <img src="Assets/images/model.png" alt="">
+            </div>
+        </section>
     </header>
     <main></main>
     <footer></footer>
