--- a/index.html
+++ b/index.html
@@ -87,8 +87,181 @@
                 <img src="Assets/images/model.png" alt="">
             </div>
         </section>
+        <!-- End Hero Section -->
     </header>
-    <main></main>
+    <main>
+        <!-- Woman Jacket Section -->
+        <section class="py-14 roboto-font px-4 md:px-12 lg:px-24 xl:px-36">
+            <h1 class="text-[#363958] text-3xl lg:text-5xl text-center lg:text-left bebas-font pb-7 lg:pb-12 ">
+                WOMAN JACKET
+            </h1>
+
+            <div class="grid lg:grid-cols-2 xl:grid-cols-3 gap-7">
+                <!-- Card 1-->
+                <div class="py-5 px-4 shadow-lg rounded-lg md:text-center mb-6">
+                    <div class="px-1 py-4 bg-[#F1F1F1] rounded-lg">
+                        <img src="Assets/images/jacket-1.png" alt="">
+                    </div>
+                    <h1 class="font-bold text-2xl text-[#363958s] py-4">Yellow Coat Jacket </h1>
+                    <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="pt-3 flex justify-between items-center">
+                        <h1 class="font-black text-4xl text-[#FABE4C]">$234</h1>
+                        <div>
+                            <button
+                                class="bg-gradient-to-r  from-[#A4BC46] to-[#85A019] flex gap-2 py-4 px-8 rounded-lg cursor-pointer">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="white" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                                </svg>
+
+                                <p class="text-white font-medium">Buy Now</p>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 2-->
+                <div class="py-5 px-4 shadow-lg rounded-lg mb-6 md:text-center">
+                    <div class="px-1 py-4 bg-[#F1F1F1] rounded-lg">
+                        <img src="Assets/images/jacket-2.png" alt="">
+                    </div>
+                    <h1 class="font-bold text-2xl text-[#363958s] py-4">Ladies Jacket</h1>
+                    <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="pt-3 flex justify-between items-center">
+                        <h1 class="font-black text-4xl text-[#FABE4C]">$234</h1>
+                        <div>
+                            <button
+                                class="bg-gradient-to-r  from-[#A4BC46] to-[#85A019] flex gap-2 py-4 px-8 rounded-lg cursor-pointer">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="white" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                                </svg>
+
+                                <p class="text-white font-medium">Buy Now</p>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 3-->
+                <div class="py-5 px-4 shadow-lg rounded-lg md:text-center mb-6">
+                    <div class="px-1 py-4 bg-[#F1F1F1] rounded-lg">
+                        <img src="Assets/images/jacket-3.png" alt="">
+                    </div>
+                    <h1 class="font-bold text-2xl text-[#363958s] py-4">Woman Leather Jacket </h1>
+                    <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="pt-3 flex justify-between items-center">
+                        <h1 class="font-black text-4xl text-[#FABE4C]">$234</h1>
+                        <div>
+                            <button
+                                class="bg-gradient-to-r  from-[#A4BC46] to-[#85A019] flex gap-2 py-4 px-8 rounded-lg cursor-pointer">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="white" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                                </svg>
+
+                                <p class="text-white font-medium">Buy Now</p>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Woman Jacket Section -->
+
+        <!-- Man Jacket Section -->
+        <section class="py-14 roboto-font px-4 md:px-12 lg:px-24 xl:px-36">
+            <h1 class="text-[#363958] text-3xl lg:text-5xl text-center lg:text-left bebas-font pb-7 lg:pb-12 ">
+                MAN JACKET
+            </h1>
+
+            <div class="grid lg:grid-cols-2 xl:grid-cols-3 gap-7">
+                <!-- Card 1-->
+                <div class="py-5 px-4 shadow-lg rounded-lg md:text-center mb-6">
+                    <div class="px-1 py-4 bg-[#F1F1F1] rounded-lg">
+                        <img src="Assets/images/jacket-4.png" alt="">
+                    </div>
+                    <h1 class="font-bold text-2xl text-[#363958s] py-4">Snowboard Jacket Mens</h1>
+                    <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="pt-3 flex justify-between items-center">
+                        <h1 class="font-black text-4xl text-[#FABE4C]">$234</h1>
+                        <div>
+                            <button
+                                class="bg-gradient-to-r  from-[#A4BC46] to-[#85A019] flex gap-2 py-4 px-8 rounded-lg cursor-pointer">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="white" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                                </svg>
+
+                                <p class="text-white font-medium">Buy Now</p>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 2-->
+                <div class="py-5 px-4 shadow-lg rounded-lg mb-6 md:text-center">
+                    <div class="px-1 py-4 bg-[#F1F1F1] rounded-lg">
+                        <img src="Assets/images/jacket-5.png" alt="">
+                    </div>
+                    <h1 class="font-bold text-2xl text-[#363958s] py-4">Man Leather Jackets</h1>
+                    <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="pt-3 flex justify-between items-center">
+                        <h1 class="font-black text-4xl text-[#FABE4C]">$234</h1>
+                        <div>
+                            <button
+                                class="bg-gradient-to-r  from-[#A4BC46] to-[#85A019] flex gap-2 py-4 px-8 rounded-lg cursor-pointer">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="white" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                                </svg>
+
+                                <p class="text-white font-medium">Buy Now</p>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Card 3-->
+                <div class="py-5 px-4 shadow-lg rounded-lg md:text-center mb-6">
+                    <div class="px-1 py-4 bg-[#F1F1F1] rounded-lg">
+                        <img src="Assets/images/jacket-6.png" alt="">
+                    </div>
+                    <h1 class="font-bold text-2xl text-[#363958s] py-4">Man Casual Jackets</h1>
+                    <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="pt-3 flex justify-between items-center">
+                        <h1 class="font-black text-4xl text-[#FABE4C]">$234</h1>
+                        <div>
+                            <button
+                                class="bg-gradient-to-r  from-[#A4BC46] to-[#85A019] flex gap-2 py-4 px-8 rounded-lg cursor-pointer">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="white" class="size-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                                </svg>
+
+                                <p class="text-white font-medium">Buy Now</p>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Man Jacket Section -->
+    </main>
     <footer></footer>
 </body>
 
