feat: add about us section

--- a/index.html
+++ b/index.html
@@ -261,6 +261,55 @@
             </div>
         </section>
         <!-- End Man Jacket Section -->
+
+        <!-- About Us Section -->
+        <section
+            class="pb-36 roboto-font px-4 md:px-12 lg:px-24 xl:px-36 lg:flex flex-row-reverse lg:items-center lg:justify-between">
+            <div class="pb-12">
+                <img class="xl:w-[599px]  xl:h-[356px] lg:w-[350px] lg:h-[260px] " src=" Assets/images/shopping.png"
+                    alt="">
+            </div>
+
+            <div>
+                <!-- card 1 -->
+                <div
+                    class="rounded-lg shadow-md my-6 md:my-10 py-6 px-5 flex flex-col items-center text-center lg:flex-row lg:justify-evenly lg:gap-8 lg:text-left lg:my-5 ">
+                    <div>
+                        <img class="w-[78px]  h-[82px]" src="Assets/icons/house.png" alt="">
+                    </div>
+                    <div class="xl:w-[276px] lg:w-[250px]">
+                        <h1 class="font-bold text-2xl text-[#363958] py-4">Find the Perfect Fit</h1>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <!-- card 1 -->
+                <div
+                    class="rounded-lg shadow-md my-6 md:my-10 py-6 px-5 flex flex-col items-center text-center lg:flex-row lg:justify-evenly lg:gap-8 lg:text-left lg:my-5">
+                    <div>
+                        <img class="w-[78px]  h-[82px]" src="Assets/icons/house.png" alt="">
+                    </div>
+                    <div class="xl:w-[276px] lg:w-[250px]">
+                        <h1 class="font-bold text-2xl text-[#363958] py-4">Find the Perfect Fit</h1>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <!-- card 1 -->
+                <div
+                    class="rounded-lg shadow-md my-6 md:my-10 py-6 px-5 flex flex-col items-center text-center lg:flex-row lg:justify-evenly lg:gap-8 lg:text-left lg:my-5">
+                    <div>
+                        <img class="w-[78px]  h-[82px]" src="Assets/icons/house.png" alt="">
+                    </div>
+                    <div class="xl:w-[276px] lg:w-[250px]">
+                        <h1 class="font-bold text-2xl text-[#363958] py-4">Find the Perfect Fit</h1>
+                        <p>Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End About Us Section -->
     </main>
     <footer></footer>
 </body>
