--- a/index.html
+++ b/index.html
@@ -264,50 +264,56 @@
 
         <!-- About Us Section -->
         <section
-            class="pb-36 roboto-font px-4 md:px-12 lg:px-24 xl:px-36 lg:flex flex-row-reverse lg:items-center lg:justify-between">
-            <div class="pb-12">
-                <img class="xl:w-[599px]  xl:h-[356px] lg:w-[350px] lg:h-[260px] " src=" Assets/images/shopping.png"
+            class="mb-40 roboto-font px-4 md:px-12 lg:px-24 xl:px-36 lg:flex lg:flex-row-reverse lg:items-center lg:gap-20">
+            <div>
+                <img class="lg:w-[400px] lg:h-[250px] xl:w-[600px] xl:h-[350px]" src="Assets/images/shopping.png"
                     alt="">
             </div>
 
-            <div>
-                <!-- card 1 -->
+            <div class="flex flex-col gap-10 pt-12">
+                <!-- Card 1 -->
                 <div
-                    class="rounded-lg shadow-md my-6 md:my-10 py-6 px-5 flex flex-col items-center text-center lg:flex-row lg:justify-evenly lg:gap-8 lg:text-left lg:my-5 ">
+                    class="py-6 px-8 shadow-lg rounded-lg text-center flex flex-col items-center gap-1 lg:flex-row lg:gap-4">
                     <div>
-                        <img class="w-[78px]  h-[82px]" src="Assets/icons/house.png" alt="">
+                        <img class="w-[78px] h-[82px]" src="Assets/icons/house.png" alt="">
                     </div>
-                    <div class="xl:w-[276px] lg:w-[250px]">
-                        <h1 class="font-bold text-2xl text-[#363958] py-4">Find the Perfect Fit</h1>
-                        <p>Everybody is different, which is why we
-                            offer styles for every body.</p>
+                    <div class="lg:w-80">
+                        <h3 class="font-bold text-[#363958] text-2xl">Find the perfect Fit</h3>
+                        <p class="text-[#3E3E3E]">
+                            Everybody is different, which is why we
+                            offer styles for every body.
+                        </p>
                     </div>
                 </div>
-                <!-- card 1 -->
+                <!-- Card 2 -->
                 <div
-                    class="rounded-lg shadow-md my-6 md:my-10 py-6 px-5 flex flex-col items-center text-center lg:flex-row lg:justify-evenly lg:gap-8 lg:text-left lg:my-5">
+                    class="py-6 px-8 shadow-lg rounded-lg text-center flex flex-col items-center gap-1 lg:flex-row lg:gap-4">
                     <div>
-                        <img class="w-[78px]  h-[82px]" src="Assets/icons/house.png" alt="">
+                        <img class="w-[78px] h-[82px]" src="Assets/icons/box.png" alt="">
                     </div>
-                    <div class="xl:w-[276px] lg:w-[250px]">
-                        <h1 class="font-bold text-2xl text-[#363958] py-4">Find the Perfect Fit</h1>
-                        <p>Everybody is different, which is why we
-                            offer styles for every body.</p>
+                    <div class="lg:w-80">
+                        <h3 class="font-bold text-[#363958] text-2xl">Free Exchanges</h3>
+                        <p class="text-[#3E3E3E]">
+                            Everybody is different, which is why we offer styles for every body.
+                        </p>
                     </div>
                 </div>
-                <!-- card 1 -->
+                <!-- Card 3 -->
                 <div
-                    class="rounded-lg shadow-md my-6 md:my-10 py-6 px-5 flex flex-col items-center text-center lg:flex-row lg:justify-evenly lg:gap-8 lg:text-left lg:my-5">
+                    class="py-6 px-8 shadow-lg rounded-lg text-center flex flex-col items-center gap-1 lg:flex-row lg:gap-4">
                     <div>
-                        <img class="w-[78px]  h-[82px]" src="Assets/icons/house.png" alt="">
+                        <img class="w-[78px] h-[82px]" src="Assets/icons/question.png" alt="">
                     </div>
-                    <div class="xl:w-[276px] lg:w-[250px]">
-                        <h1 class="font-bold text-2xl text-[#363958] py-4">Find the Perfect Fit</h1>
-                        <p>Everybody is different, which is why we
-                            offer styles for every body.</p>
+                    <div class="lg:w-80">
+                        <h3 class="font-bold text-[#363958] text-2xl">Find the perfect Fit
+                        </h3>
+                        <p class="text-[#3E3E3E]">
+                            Everybody is different, which is why we offer styles for every body.
+                        </p>
                     </div>
                 </div>
             </div>
+
         </section>
         <!-- End About Us Section -->
     </main>
