fix: color name typing mistake and extra bottom  margin

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 
             <div class="grid lg:grid-cols-2 xl:grid-cols-3 gap-7">
                 <!-- Card 1-->
-                <div class="py-5 px-4 shadow-lg rounded-lg md:text-center mb-6">
+                <div class="py-5 px-4 shadow-lg rounded-lg md:text-center">
                     <div class="px-1 py-4 bg-[#F1F1F1] rounded-lg">
                         <img src="Assets/images/jacket-1.png" alt="">
                     </div>
-                    <h1 class="font-bold text-2xl text-[#363958s] py-4">Yellow Coat Jacket </h1>
+                    <h1 class="font-bold text-2xl text-[#363958] py-4">Yellow Coat Jacket </h1>
                     <p class="text-[#3E3E3E]">Lorem Ipsum is simply dummy text of the
                         printing and typesetting industry.</p>
                     <div class="pt-3 flex justify-between items-center">
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <!-- Card 2-->
-                <div class="py-5 px-4 shadow-lg rounded-lg mb-6 md:text-center">
+                <div class="py-5 px-4 shadow-lg rounded-lg md:text-center">
                     <div class="px-1 py-4 bg-[#F1F1F1] rounded-lg">
                         <img src="Assets/images/jacket-2.png" alt="">
                     </div>
@@ -150,7 +150,7 @@
                     </div>
                 </div>
                 <!-- Card 3-->
-                <div class="py-5 px-4 shadow-lg rounded-lg md:text-center mb-6">
+                <div class="py-5 px-4 shadow-lg rounded-lg md:text-center">
                     <div class="px-1 py-4 bg-[#F1F1F1] rounded-lg">
                         <img src="Assets/images/jacket-3.png" alt="">
                     </div>
@@ -186,7 +186,7 @@
 
             <div class="grid lg:grid-cols-2 xl:grid-cols-3 gap-7">
                 <!-- Card 1-->
-                <div class="py-5 px-4 shadow-lg rounded-lg md:text-center mb-6">
+                <div class="py-5 px-4 shadow-lg rounded-lg md:text-center">
                     <div class="px-1 py-4 bg-[#F1F1F1] rounded-lg">
                         <img src="Assets/images/jacket-4.png" alt="">
                     </div>
@@ -211,7 +211,7 @@
                     </div>
                 </div>
                 <!-- Card 2-->
-                <div class="py-5 px-4 shadow-lg rounded-lg mb-6 md:text-center">
+                <div class="py-5 px-4 shadow-lg rounded-lg  md:text-center">
                     <div class="px-1 py-4 bg-[#F1F1F1] rounded-lg">
                         <img src="Assets/images/jacket-5.png" alt="">
                     </div>
@@ -236,7 +236,7 @@
                     </div>
                 </div>
                 <!-- Card 3-->
-                <div class="py-5 px-4 shadow-lg rounded-lg md:text-center mb-6">
+                <div class="py-5 px-4 shadow-lg rounded-lg md:text-center">
                     <div class="px-1 py-4 bg-[#F1F1F1] rounded-lg">
                         <img src="Assets/images/jacket-6.png" alt="">
                     </div>
